--- a/notes/paingain/index.html
+++ b/notes/paingain/index.html
@@ -48,7 +48,7 @@
 <div class="meta">
 </div>
 <div class="warn" id="pBH9LYQjBM8">
-<p><i class='share'><a href='/notes/paingain#pBH9LYQjBM8'>&#xe902;</a></i>Это может быть не очень удобный заход к концепции полезности, но он предыдущие рассуждения вывели меня именно на него.</p>
+<p><i class='share'><a href='/notes/paingain#pBH9LYQjBM8'>&#xe902;</a></i>Это может быть не очень удобный заход к концепции полезности, но предыдущие рассуждения вывели меня именно на него.</p>
 </div>
 <p><a href="/notes/expo">Прошлая статья</a>
         <button class='link-meta-anchor'><strong>i</strong></button>
