--- a/calculators/credits.html
+++ b/calculators/credits.html
@@ -32,6 +32,12 @@
                 <h1> Калькуляторы кредитов </h1>
                 <div class="meta"><p class=summary>Калькуляторы для расчёта, сравнения и выбра различных схем выплаты кредитов. Насколько выгоднее или невыгоднее взять кредит и вложить по сравнению с постепенным накоплением.</p>
                     <p> Опубликовано: <time>2019-10-13</time> </p>
+<p>Находится в:</p>
+                    <ul>
+    <a href='/calculators'>Калькуляторы</a>
+
+    </ul>
+
                 </div>
             </header>
             <div class="content">                <section id="">
@@ -344,6 +350,9 @@ function toggleCollapsible(elem) {
                     Категории:<a href="/categories/math">Математика</a>
 <a href="/categories/persfin">Личные финансы</a>
 <a href="/categories/savings">Сбережения</a>
+                    </div>
+                    <div class="up">
+                        <span> &uarr; <a href='/calculators'> Калькуляторы</a> &uarr; </span>
                     </div>
             </div>
             <aside style='display: flex'>
