--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -32,7 +32,7 @@
                 <h1> Акции </h1>
                 <div class="meta"><p class=summary>Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки.</p>
                     <p> Опубликовано: <time>2020-05-06</time> </p>
-                    <p>  Обновлено: <time>2021-12-11</time> </p>
+                    <p>  Обновлено: <time>2021-12-26</time> </p>
 <p>Находится в:</p>
                     <ul>
     <a href='/literacy/instruments'>Краткий обзор инструментов сбережения...</a>
@@ -71,6 +71,7 @@
 <li><a href="/literacy/instruments/stocks#_9">Ссылки по теме</a></li>
 <ul>
 <li><a href="/literacy/instruments/stocks#_10">Джон Богл. «Инвесторы против спекулянтов». Отрывок</a></li>
+<li><a href="/literacy/instruments/stocks#_11">Hendrik Bessembinder. Do Stocks Outperform Treasury Bills?</a></li>
 </ul>
 </ul></div>
 <section id="_2">
@@ -301,7 +302,7 @@
 <div>
         Обновления:
         <ul>
-                <li>2021-12-11: Добавлены ссылки на дополнительные материалы</li>
+                <li>2021-12-26: Добавлены ссылки на дополнительные материалы</li>
         </ul>
         </div>
 </div>
@@ -313,6 +314,12 @@
 <p>Для тех, кто покупая акции определенной компании, считает, что становится частью бизнеса и участвует в чем-то. Давным-давно рядовой миноритарный акционер стал просто владельцем бумажки, которая дает возможность получить некую долю от оставшихся после распределения денег (если еще что-то осталось). Говорить о том, что кто-то участвует в бизнесе, если у него нет блокирующего или контрольного пакета, немного наивно.</p>
 <p>Если у инвестора нет доступа к действительно большим источникам средств, и он не является бизнесменом по типу Уоррена Баффета, такому вкладчику (а по-другому его и не назовешь) об акциях следует думать как о классе активов, а не как о вложении в отдельную компанию. К сожалению (а для многих, к счастью), в настоящее время рядовой акционер рискует только вложенной суммой, но при этом похож на бездомного перед дверьми учреждения в надежде, что ему вынесут миску супа.</p>
 </blockquote>
+</section>
+<section id="_11">
+<h3><a href="/literacy/instruments/stocks#_11">Hendrik Bessembinder. Do Stocks Outperform Treasury Bills?</a></h3>
+<div class="meta">
+<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2900447" target="_blank"><i class=share>&#xea7e;</i> Внешний источник</a></div>
+<p>Four out of every seven common stocks that have appeared in the CRSP database since 1926 have lifetime buy-and-hold returns less than one-month Treasuries. When stated in terms of lifetime dollar wealth creation, the best-performing four percent of listed companies explain the net gain for the entire U.S. stock market since 1926, as other stocks collectively matched Treasury bills. These results highlight the important role of positive skewness in the distribution of individual stock returns, attributable both to skewness in monthly returns and to the effects of compounding. The results help to explain why poorly-diversified active strategies most often underperform market averages.</p>
 </section>
 </section>
 </section>
