--- a/literacy/risk_aspects.html
+++ b/literacy/risk_aspects.html
@@ -125,7 +125,7 @@
 </div>
 <p>Риск ликвидности — это резкое падение ликвидности инструмента. Причём вероятность его реализации довольно слабо связана с нормальной ликвидностью инструмента: в кризис очередь заявок очень ликвидного инструмента вполне может опустеть, а неликвидного остаться практически без изменений (если его, например, кризисные явления мало затронули).</p>
 <p>Если вы собираетесь торговать с плечом или на срочном рынке, и думаете, что в случае неблагоприятного развития событий брокер просто закроет ваши проблемные позиции по маржин-коллу, и вы лишитесь «всего лишь» половины капитала, то это ошибка.
-<span class='hl' id='hvp0VboIlfk' markdown=1><i class='share'><a href='/literacy/risk_aspects#hvp0VboIlfk'>&#xe902;</a></i>Потому что если позиция становится <em>действительно</em> проблемной, то контрагентов для её закрытия может не оказаться, или предложенная ими цена будет вопиющей (отрицательные цены на нефтяные фьючерсы все видели?).
+<span class='hl' id='6Z0ucgOZ5Js' markdown=1><i class='share'><a href='/literacy/risk_aspects#6Z0ucgOZ5Js'>&#xe902;</a></i>Потому что если позиция становится <em>действительно</em> проблемной, то контрагентов для её закрытия может не оказаться, или предложенная ими цена будет вопиющей (отрицательные цены на нефтяные фьючерсы все видели?).
 </span>Если ваша стратегия требует, чтобы в какой-то момент ликвидность по инструменту <em>была достаточной</em> — это крайне рискованная стратегия. Если она одновременно допускает бесконечный убыток — однажды вы останетесь должны брокеру. Много. Потому что ликвидность не стабильна и имеет тенденцию исчезать как раз тогда, когда она больше всего вам нужна.</p>
 </section>
 </section>
@@ -146,8 +146,8 @@
 </ol>
 <p>И все возможные двухсторонние отношения между этими странами: соглашения о двойном налогообложении, запрет на владение определёнными видами активов в других странах (или зарегистрированных в других странах), правила налогообложения иностранных активов и отчётность по ним...</p>
 <p>Правила владения и отчётности, налоговые ставки могут меняться, иногда внезапно, делая часть портфеля инвестора просто незаконной (или «просто» страшно геморройной и убыточной).</p>
-<div class="todo" id="-iK8eMcBrLg">
-<p><i class='share'><a href='/literacy/risk_aspects#-iK8eMcBrLg'>&#xe902;</a></i>Например, в РФ законность инвестиций через зарубежного брокера висит на директиве председателя ЦБ, для которой нет никаких формальных требований к процедуре обсуждения/принятия/опубликования. Т.е. о незаконности иностранных брокерских счетов (и штрафе в 200% от стоимости активов на них) мы можем узнать только после того, как они были таковыми признаны.</p>
+<div class="todo" id="IxEDM09xTJA">
+<p><i class='share'><a href='/literacy/risk_aspects#IxEDM09xTJA'>&#xe902;</a></i>Например, в РФ законность инвестиций через зарубежного брокера висит на директиве председателя ЦБ, для которой нет никаких формальных требований к процедуре обсуждения/принятия/опубликования. Т.е. о незаконности иностранных брокерских счетов (и штрафе в 200% от стоимости активов на них) мы можем узнать только после того, как они были таковыми признаны.</p>
 </div>
 </section>
 <section id="broker">
@@ -213,8 +213,8 @@
             <span class='description'>Капитал — это не только отложенное потребление, это и страховка, и финансовая свобода, и дополнительные доходы.</span>
         </span>.</p>
 <p>Многим это тягостно, особенно пришедшим из бизнеса. Хочется более острых ощущений и большей доходности. Острые ощущения будут, а вот доходность на них скорее убьёт ваш капитал. Потому что в мире <em>финансовых</em> инструментов не так много способов повысить итоговый размер капитала за счёт принятия большего риска, да и их масштабируемость — ограничена.</p>
-<div class="todo" id="Ub577Oz5r9o">
-<p><i class='share'><a href='/literacy/risk_aspects#Ub577Oz5r9o'>&#xe902;</a></i>Инвестиции сами по себе не создают доходности. Доходность вам платят другие инвесторы за то, что вы принимаете на себя их риски. Чтобы увеличить доходность, надо не просто найти и принять на себя дополнительный риск. Нужно, чтобы за принятие этого риска кто-то хотел заплатить. Причём больше, чем этот риск + транзакционные издержки у вас отнимут. И не отдать эту плату посредникам (на чём любят наживаться продавцы структурных продуктов).</p>
+<div class="todo" id="CCOEMKx-H0o">
+<p><i class='share'><a href='/literacy/risk_aspects#CCOEMKx-H0o'>&#xe902;</a></i>Инвестиции сами по себе не создают доходности. Доходность вам платят другие инвесторы за то, что вы принимаете на себя их риски. Чтобы увеличить доходность, надо не просто найти и принять на себя дополнительный риск. Нужно, чтобы за принятие этого риска кто-то хотел заплатить. Причём больше, чем этот риск + транзакционные издержки у вас отнимут. И не отдать эту плату посредникам (на чём любят наживаться продавцы структурных продуктов).</p>
 </div>
 </section>
 </section>
@@ -240,6 +240,7 @@
             <a href="https://www.facebook.com/sharer/sharer.php?u=/literacy/risk_aspects" target="_blank"><i class="share">&#xea91;</i></a>
         </div>        
             <a class="donate-button" href="/donate">Отблагодарить</a>
+          <a class="donate-button" href='https://t.me/on_fin/126' target="_blank">Комментарии <img src='/images/tg.svg' style='height: 0.7em; margin-left: -0.5ex; vertical-align: text-top'></a>
     </div>
             </aside>
         </article>
